--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <ul>
+        <li><img src="" alt=""></li>
         <li style="--i:5;"><a href="#">Ahmedov</a></li>
         <li style="--i:4;"><a href="#">Home</a></li>
         <li style="--i:3;"><a href="#">Canact</a></li>
